# semestr-2-labsss

./: CMakeLists.txt  s2p1.cpp
lab2s2/: CMakeLists.txt  mystring.cpp
p1s2/: CMakeLists.txt  pr1.cpp
pong/: Ball.cpp  Ball.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Logger.cpp  Logger.hpp  Shape.cpp  Shape.hpp  main.cpp
pr1s2/: CMakeLists.txt  s2p1.cpp
pr2s2/: CMakeLists.txt  pr2s2.cpp
s2lab1/: CMakeLists.txt  main.cpp
s2lab3/: CMakeLists.txt  complexnums.cpp
s2lab4/: CMakeLists.txt  lab4s2.cpp
s2lab6/: CMakeLists.txt  log.cpp  log.hpp  logger.cpp
s2lab7/: CMakeLists.txt  s2lab7.cpp
s2lab8/: CMakeLists.txt  s2lab8.cpp
s2pr4/: CMakeLists.txt  configuration.txt  s2pr4.cpp
